# cmsis-core-nxp-jn517x

./: apache-2.0.txt  bsd-3-clause.txt  module.json
cmsis-core-nxp-jn517x/: ARMcortexM3Registers_JN51xx.h  AppHardwareApi.h  AppHardwareApi_JN5179.h  AppHardwareApi_JN517x.h  JN517x.h  MicroSpecific.h  MicroSpecific_JN517x.h  MicroSpecific_arm.h  PeripheralRegs.h  PeripheralRegs_JN5179.h  PeripheralRegs_JN517x.h  cmsis.h  cmsis_nvic.h  jendefs.h
source/: CMakeLists.txt  cmsis_nvic.c
source/boot_gcc/: startup_jn517x.c
